<resources>
    <string name="app_name">Cálculo de figuras Geometricas</string>
    <string name="area">Área: %1$s </string>
    <string name="perimetro">Perímetro: %1$s </string>
    <string name="retangulo">Retângulo</string>
    <string name="circulo">Circulo</string>
    <string name="base">Base</string>
    <string name="altura">Altura</string>
    <string name="raio">Raio</string>
    <string name="calcular_area">Calcular Área"</string>
    <string name="calcular_perimetro">Calcular Perímetro"</string>
    <string name="resultado">Resultado</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>